--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,14 @@
+2003-09-08 Roberto Raggi <roberto@kdevelop.org>
+    * Added the GUI for create the code completion databases for
+      external libraries like Qt and KDE
+
 2003-09-06 Bernd Pol <bernd.pol@online.de>
     * Some updates on the "KDevelop 3.0 users's manual" (docbook)
- 
+
 2003-08-29 Alexander Dymo <cloudtemple@mksat.net>
     * Added the initial version of generic project manager.
       It is the replacement of script/custom/pascal/ada/haskell/etc. project managers.
-      Extensible with plugins. Currently available project manager based on shell scripts. 
+      Extensible with plugins. Currently available project manager based on shell scripts.
 
 2003-08-28 Harald Fernengel <harry@kdevelop.org>
     * SQL support now displays tables and fields in the classbrowser
@@ -34,7 +38,7 @@
 2003-07-28 Mario Scalas <mario.scalas@libero.it>
     * PartExplorer is now shown in the embedded SelectView because the dialog-based interface was hardly useful!
     * Results list will now use tooltips to show available services' properties.
-    * Several bugfixes in GUI code 
+    * Several bugfixes in GUI code
 
 2003-07-28 Amilcar Lucas <a.lucas@tu-bs.de>
     * Full support for Doxygen 1.3.3
